--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,18 @@ description = "Default template for PDM package"
 authors = [
     {name = "Seokxkyu", email = "kyuseok000@gmail.com"},
 ]
-dependencies = []
-requires-python = "==3.11.*"
+dependencies = [
+	"scikit-learn>=1.5.1"
+]
+requires-python = ">=3.11"
 readme = "README.md"
 license = {text = "MIT"}
 
 
 [tool.pdm]
 distribution = false
+
+[tool.pdm.dev-dependencies]
+note = [
+    "notebook>=7.2.2",
+]
