--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = [
     {name = "Seokxkyu", email = "kyuseok000@gmail.com"},
 ]
 dependencies = [
+	"fastapi>=0.112.2",
 	"scikit-learn>=1.5.1"
 ]
 requires-python = ">=3.11"
