--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ distribution = false
 [tool.pdm.dev-dependencies]
 note = [
     "notebook>=7.2.2",
+    "matplotlib>=3.9.2",
 ]
 tests = [
     "pytest>=8.3.2",
