--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,5 +28,8 @@ tests = [
     "pytest>=8.3.2",
 ]
 
+[tool.pytest.ini_options]
+pythonpath = ["src/", "."]
+
 [project.scripts]
 pp = 'fishregression.cli:predict'
