--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ tests = [
 ]
 
 [tool.pytest.ini_options]
-pythonpath = ["src/", "."]
+pythonpath = "src"
 
 [project.scripts]
 pp = 'fishregression.cli:predict'
