--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "fishregression"
-version = "0.2.1"
+version = "0.3.0"
 description = "Default template for PDM package"
 authors = [
     {name = "Seokxkyu", email = "kyuseok000@gmail.com"},
@@ -33,3 +33,4 @@ pythonpath = "src"
 
 [project.scripts]
 pp = 'fishregression.cli:predict'
+papi = 'fishregression.cli:predict_api'
